# omnilua

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PORTING.md  README.md  RELEASING.md  SCOPE_NONSTATIC_DECISION.md  index.html  luac.out  performance.html  styles.css
.claude/: settings.json
.claude/agents/: translator.md
.claude/hooks/: forbidden-import.sh  pretooluse-no-gcref-new.sh  trailer-required.sh  unsafe-budget.sh
.github/workflows/: ci.yml  npm-publish-wasm.yml  release.yml  static.yml
ANALYSES/: GC_ROOTS.md  README.md  file_deps.txt  version_feature_matrix.tsv
crates/lua-cli/: Cargo.toml  README.md
crates/lua-cli-test-rust-module/: Cargo.toml
crates/lua-cli-test-rust-module/src/: lib.rs
crates/lua-cli/src/: interp.rs  main.rs  repl.rs
crates/lua-cli/tests/: traceback_oracle.rs
crates/lua-code/: Cargo.toml
crates/lua-code/src/: codegen.rs  lib.rs  opcode_names.rs  opcodes.rs
crates/lua-coro/: Cargo.toml
crates/lua-coro/src/: lib.rs
crates/lua-gc/: CLAUDE.md  Cargo.toml
crates/lua-gc/src/: gc.rs  heap.rs  lib.rs  mem.rs
crates/lua-hlua-shim/: Cargo.toml
crates/lua-lex/: Cargo.toml
crates/lua-parse/: CLAUDE.md  Cargo.toml  GRADUATED.md
crates/lua-parse/src/: lib.rs
crates/lua-rs-derive/: Cargo.toml
crates/lua-rs-derive/src/: lib.rs
crates/lua-rs-derive/tests/: derive.rs  field_visibility.rs  full.rs
crates/lua-rs-lfs/: Cargo.toml
crates/lua-rs-runtime/: CLAUDE.md  Cargo.toml  README.md
crates/lua-rs-runtime/examples/: sandbox_smoke.rs  scope_delegate_macro.rs  scope_world.rs
crates/lua-rs-runtime/src/: lib.rs  serde_impl.rs
crates/lua-rs-runtime/tests/: bytecode.rs  dump_kit.rs  error_wording_kit.rs  gc_control.rs  large_table.rs  multiversion_53.rs  multiversion_55.rs  multiversion_oracle.rs  named_registry.rs  number_seam.rs  panic_hook_chaining.rs  registry_key.rs  runtime_sandbox.rs  sandbox.rs  scope_delegate.rs  scope_error_rooting.rs  scope_with_derive.rs  scope_world_smoke.rs  serde_integration.rs  table_helpers.rs  traceback_capture.rs  uservalues.rs  version_support.rs
crates/lua-rs-runtime/tests/golden/: dump_headers.tsv
crates/lua-stdlib/: CLAUDE.md  Cargo.toml  GRADUATED.md
crates/lua-stdlib/src/: auxlib.rs  base.rs  bit32_lib.rs  coro_lib.rs  debug_lib.rs  init.rs  io_lib.rs  lib.rs  loadlib.rs  math_lib.rs  os_lib.rs  sandbox.rs  state_stub.rs  string_lib.rs  table_lib.rs  utf8_lib.rs
crates/lua-stdlib/tests/: base_strengthen.rs  io_strengthen.rs  math_float_only.rs
crates/lua-types/: Cargo.toml
crates/lua-types/src/: arith.rs  closure.rs  error.rs  gc.rs  lib.rs  opcode.rs  proto.rs  status.rs  string.rs  table.rs  tagmethod.rs  trace_impls.rs  upval.rs  userdata.rs  value.rs  version.rs
crates/lua-vm/: CLAUDE.md  Cargo.toml
crates/lua-vm/src/: api.rs  ctype.rs  debug.rs  do_.rs  dump.rs  func.rs  lib.rs  object.rs  opcode_profile.rs  state.rs  string.rs  table.rs  tagmethods.rs  trace_impls.rs  undump.rs  vm.rs  zio.rs
crates/lua-wasm/: Cargo.toml
crates/lua-wasm-smoke/: Cargo.toml
crates/lua-wasm-smoke/src/: lib.rs
crates/lua-wasm/src/: lib.rs
docs/: EMBEDDING_API_IMPLEMENTATION.md  EMBEDDING_PARITY_TIER_ATTACK_PLAN.md  EXACT_ROOTING_SPEC.md  FUTURE_GOALS.md  GC_ALLOC_PLAN.md  GHOST_ABSTRACTION_REGISTER.md  IDIOMATIZATION_SPRINT_1_SPEC.md  IDIOMATIZATION_SPRINT_2_SPEC.md  IDIOMATIZATION_VM_FINDINGS.md  ISSUE_BURNDOWN_SPEC.md  LOOP_DIAGRAM.md  LUA_PHASE_E_RUNTIME_SPEC.md  LUA_SYSTEM_DEEP_DIVE.md  MATCHING_C_PERFORMANCE.md  MEASUREMENT_PROTOCOL.md  NPM_WASM_PUBLISHING.md  PERFORMANCE_MODEL.md  PERFORMANCE_PRINCIPLES.md  PERF_PUSH_SPEC.md  PERF_ROADMAP_AUDIT.md  PERF_SPRINT_2_SPEC.md  PHASE_G_LUAROCKS_PLAN.md  PUBLIC_README_HANDOFF.md  PUBLISH_READINESS.md  REBRAND_SPEC.md  RELEASE_DRYRUN.md  RETROSPECTIVE_AND_PRODUCTIZATION.md  SANDBOXING_EXPLORATION.md  SESSION_HANDOFF.md  SPEEDING_UP_AGENT_PORTS.md  WASM_HOST_BOUNDARY_SPEC.md
docs/decisions/: DERIVE_FIELD_EXPOSURE_DECISION.md
docs/design/: EMBEDDING_API.md  EMBEDDING_API_SPEC.md  MULTI_VERSION.md  SANDBOXING.md
docs/posts/: safety-tax.md  show-hn-playground.md
docs/stuck-tests/: README.md  errors.lua.md  files.lua.md  gc.lua.md
examples/: README.md
examples/bevy/: Cargo.toml  README.md  index.html
examples/bevy/assets/: game.lua
examples/bevy/src/: main.rs
examples/wasm-browser/: README.md  index.html
guide/: browser.html  docs.js  embedding.html  from-mlua.html  game-scripting.html  index.html  sandboxing.html  versions.html
harness/: CLAUDE.md  PARITY.md  asan-stress.sh  build_lua55_compat_off.sh  check_publish_readiness.sh  check_release_versions.mjs  check_wasm_package.sh  completion.toml  d1a_agent_prompt.txt  d1a_dispatch.sh  dispatch_compiler_fixer.sh  envelope.toml  fanout.sh  forbidden-patterns.sh  gen_golden.sh  history.jsonl  implement_loop.sh  mega_loop.sh  multiversion_diff_suite.sh  overnight.sh  parity_check.sh  rejected-experiments.jsonl  respawn_loop.sh  run_official_all.sh  run_official_test.sh  run_one_test.sh  runners.toml  source.toml  stop-hook.sh  unsafe-budgets.toml  work-packets.jsonl
harness/bench/: README.md  backfill-tests.sh  bincache.sh  build-pgo.sh  bytecode-parity.py  compare.sh  compare_bins.sh  compare_luars.sh  gc-profile.sh  heap-diff.sh  history.py  instr-count.sh  opcode-profile.sh  profile-hotspots.sh  scaling-check.py  table-bytes.sh  vm-execute-attribution.py
harness/evidence/: ledger.jsonl
harness/impl/: _line_check.lua  agent-costs-O1.txt  agent-costs-O2.txt  agent-costs-O8.txt  build-O1.err  build-O10.err  build-O13.err  build-O15.err  build-O17.err  build-O2.err  build-O3.err  build-O4.err  build-O5.err  build-O6.err  build-O7.err  build-O9.err  d1a-lua-vm.transcript.jsonl  debug-costs-O1.txt  debug-costs-O12.txt  debug-costs-O13.txt  debug-costs-O14.txt  debug-costs-O15.txt  debug-costs-O16.txt  debug-costs-O2.txt  debug-costs-O3.txt  debug-costs-O4.txt  (+279 more)
specs/: ISSUE_234_BACKEND_SEAM_SPEC.md  LUA_5_1_PLAN.md  LUA_5_1_PORT_SPEC.md  MULTIVERSION_ADVERSARIAL_FINDINGS.md  MULTIVERSION_PRELIM_REVIEW.md  README.md
(+344 files in other folders)
