[package]
name = "lua-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "lua-rs"
path = "src/main.rs"

[dependencies]
lua-types.workspace = true
lua-vm.workspace = true
lua-stdlib.workspace = true
lua-parse.workspace = true
