[package]
name = "lua-coro"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# This crate currently has no unsafe implementation. Raise the budget in
# harness/unsafe-budgets.toml only if a future stackful backend lands.
[lints.rust]
unsafe_code = "forbid"

[dependencies]
lua-types.workspace = true
