[package]
name = "lua-gc"
version.workspace = true
description = "omniLua's garbage collector — internal crate; depend on `omnilua`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# Per harness/unsafe-budgets.toml, this crate may use a small unsafe kernel
# for the production heap/collector substrate. Every block requires
# `// SAFETY: <invariant>`. See PORTING.md §11.
[lints.rust]
unsafe_code = "allow"

[dependencies]
# No dependency on lua-types: lua-gc is the lowest crate. lua-types
# depends on lua-gc so that LuaValue/LuaString/UpVal can impl Trace.
