[package]
name = "lua-parse"
version.workspace = true
description = "omniLua's Lua parser — internal crate; depend on `omnilua`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
lua-types.workspace = true
lua-vm.workspace = true
lua-code.workspace = true
lua-lex.workspace = true
