[package]
name = "omnilua"
version.workspace = true
description = "Every Lua, everywhere — pure-Rust Lua 5.1–5.5, suite-passing, LuaRocks-compatible, wasm-ready."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lib]
name = "omnilua"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "allow"

[features]
# Re-export the derive macros (LuaUserData, lua_methods) from this crate.
derive = ["dep:lua-rs-derive"]

[[example]]
name = "scope_delegate_macro"
required-features = ["derive"]

[dependencies]
lua-gc.workspace = true
lua-types.workspace = true
lua-vm.workspace = true
lua-stdlib.workspace = true
lua-parse.workspace = true
lua-rs-derive = { workspace = true, optional = true }
