[package]
name = "lua-stdlib"
version.workspace = true
description = "omniLua's Lua standard library — internal crate; depend on `omnilua`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[dependencies]
lua-types.workspace = true
lua-vm.workspace = true

# `omnilua` (the embedding crate) depends on `lua-stdlib`, so it can only appear
# here as a DEV-dependency — dev-deps do not participate in the normal build
# graph, so this does not form a build cycle. It is used by the white-box
# behavioral tests in `tests/` that must inspect the raw `Value::Integer` vs
# `Value::Number` distinction that Lua's own `type()` cannot observe under the
# float-only (5.1/5.2) number model.
[dev-dependencies]
omnilua = { path = "../lua-rs-runtime" }
