[package]
name = "lua-types"
version.workspace = true
description = "omniLua's core Lua value and error types — internal crate; depend on `omnilua`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
lua-gc.workspace = true
