[package]
name = "lua-vm"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
opcode-profile = []

[dependencies]
lua-types.workspace = true
lua-gc.workspace = true
