[package]
name = "lua-vm"
version.workspace = true
description = "omniLua's bytecode virtual machine and interpreter loop — internal crate; depend on `omnilua`."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
opcode-profile = []

[dependencies]
lua-types.workspace = true
lua-gc.workspace = true
