[package]
name = "lua-wasm"
version.workspace = true
description = "Bare wasm32-unknown-unknown embedding artifact for omniLua."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints.rust]
unsafe_code = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

# `default` ships the full stdlib (current behavior). A lean sandbox bundle is
# `--no-default-features`, optionally re-enabling a subset via `omnilua`'s knobs
# (e.g. `--no-default-features --features omnilua/os` to keep only `os`).
[features]
default = ["full"]
full = ["omnilua/full"]

[dependencies]
lua-types.workspace = true
omnilua = { workspace = true }
